# bit-rs

./: Cargo.toml
src/: db.rs  index.rs  iter.rs  lib.rs  meta.rs
src/disk/: data_file.rs  io.rs  mod.rs
src/index/: btree.rs  mod.rs
