[package]
name = "bit-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bytes = "1.4.0"
tokio = { version = "1.29.1", features = ["full"] }
serde = "1.0.171"
log = "0.4.19"
env_logger = "0.10.0"
prost = "0.12.0"
crc32fast = "1.3.2"
